--- a/css/style.css
+++ b/css/style.css
@@ -78,13 +78,15 @@ button{
 button:hover{
   background: rgb(31, 30, 30);
   color: white;
-  box-shadow: 0 0 8px 0.5px rgb(94, 94, 94);
+  /* box-shadow: 0 0 8px 0.5px rgb(94, 94, 94); */
 }
 button:active{
-  background: rgb(44, 44, 44);
+  background: rgb(8, 8, 8);
   color: white;
+  box-shadow: inset 0 0 8px 2px rgb(68, 68, 68);
 }
-.equals{
+
+.equals{   
   width: 89%;
   border-radius: 30px;
 }
@@ -98,10 +100,10 @@ button:active{
 .AC:hover{
   background: white;
   color: red;
-  box-shadow: 0 0 5px 0.5px rgb(236, 68, 68);
 }
 .AC:active{
-  background: rgb(170, 170, 170);
+  background: rgb(231, 231, 231);
+  box-shadow: inset 0 0 8px 2px rgb(148, 148, 148);
   color: red;
 }
 
