--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,16 @@
 
 /* Clear fix hack */
 .clearfix:after {
-     content: ".";
-     display: block;
-     clear: both;
-     visibility: hidden;
-     line-height: 0;
-     height: 0;
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
 }
 
 .clear {
-	clear: both;
+  clear: both;
 }
 
 /******************************************
@@ -25,25 +25,23 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
 /******************************************
 /* LAYOUT
 /*******************************************/
-h1{
+h1 {
   display: flex;
   justify-content: center;
   font-size: 3rem;
 }
-.calculator{
+.calculator {
   width: 320px;
   height: 445px;
   margin: 30px auto;
-  background: #000;
+  background: rgb(41 68 107);
   border-radius: 25px;
   padding: 30px;
-  padding-top: 30px;
 }
-input{
+input {
   background: white;
   border: none;
   color: #000;
@@ -53,55 +51,55 @@ input{
   text-align: right;
   font-size: 2.5rem;
   font-family: Arial, Helvetica, sans-serif;
-
 }
-.buttonContainer{
+.buttonContainer {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 5px;
-  padding-top: 15px;
+  width: 100%;
+  padding-top: 16px;
 }
-button{
+button {
+  padding: 2px;
   background: white;
-   height: 90px;
-   border: none;
-   width: 3.1rem;
-   height: 3.1rem;
-   border-radius: 50%;
-   margin: 5px;
-   font-size: 2.2rem;
-   font-weight: bold;
-   cursor: pointer;
-   transition: all 0.2s;
+  height: 90px;
+  border: none;
+  width: 3.1rem;
+  height: 3.1rem;
+  border-radius: 50%;
+  margin: 4px 7px;
+  font-size: 2.2rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.2s;
 }
-button:hover{
-  background: rgb(31, 30, 30);
+button:hover {
+  background: rgb(66, 66, 66);
   color: white;
   /* box-shadow: 0 0 8px 0.5px rgb(94, 94, 94); */
 }
-button:active{
-  background: rgb(8, 8, 8);
+button:active {
+  background: rgb(66, 66, 66);
   color: white;
-  box-shadow: inset 0 0 8px 2px rgb(68, 68, 68);
+  box-shadow: inset 0 0 8px 2px rgb(100, 100, 100);
 }
 
-.equals{   
+.equals {
   width: 91%;
+  margin-top: 10px;
   border-radius: 30px;
 }
-.AC{
+.AC {
   background: red;
   font-size: 1.8rem;
   padding-left: 4px;
   color: white;
-
 }
-.AC:hover{
+.AC:hover {
   background: white;
   color: red;
 }
-.AC:active{
+.AC:active {
   background: rgb(231, 231, 231);
   box-shadow: inset 0 0 8px 2px rgb(148, 148, 148);
   color: red;
