changes bg in style css

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ h1 {
   width: 320px;
   height: 445px;
   margin: 30px auto;
-  background: rgb(41 68 107);
+  background: rgb(19, 42, 75);
   border-radius: 25px;
   padding: 30px;
 }
